apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app: home-assistant
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
              name: home-assistant
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
